--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "build:linux": "electron-vite build && electron-builder --linux"
   },
   "dependencies": {
+    "@andreekeberg/imagedata": "^1.0.2",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "openai": "^4.104.0"
+    "buffer": "^6.0.3",
+    "openai": "^4.104.0",
+    "screenshot-desktop": "^1.15.2",
+    "ssim.js": "^3.5.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
